# gidterm

./: .mcp.json  Cargo.toml  GID-INTEGRATION.md  IMPLEMENTATION-SUMMARY.md  STATUS.md  TEST.md  live-demo.yml  simple-test.yml  test-gid-integration.yml  test-graph.yml  test-session.sh  test_now.sh
.gid/: graph.yml
.gid/history/: graph.2026-01-31T18-13-41-245Z.yml  graph.2026-01-31T18-13-48-405Z.yml  graph.2026-01-31T18-37-57-579Z.yml  graph.2026-01-31T18-38-01-394Z.yml
.gidterm/sessions/: 2026-01-31-19-26-10.json  latest.json
docs/: design.md  progress.md  rfc-multi-project-dx.md
examples/: test_execution.rs  test_scheduler.rs
src/: app.rs  lib.rs  main.rs  notifications.rs  ports.rs  session.rs  workspace.rs
src/ai/: control.rs  events.rs  mod.rs
src/core/: executor.rs  graph.rs  mod.rs  pty.rs  scheduler.rs
src/semantic/: advisor.rs  commands.rs  history.rs  mod.rs
src/semantic/parsers/: build.rs  mod.rs
src/ui/: dashboard.rs  live.rs  mod.rs
src/ui/views/: comparison.rs  graph.rs  mod.rs  project_overview.rs  terminal.rs
test-workspace/.gidterm/sessions/: 2026-01-31-17-34-21.json  latest.json
tests/: integration_test.rs
