[package]
name = "gidterm"
version = "0.2.0"
edition = "2021"
authors = ["tonitangpotato <tonitangpotato@users.noreply.github.com>"]
description = "Graph-Driven Semantic Terminal Controller - A semantic terminal controller that integrates project/task graphs with intelligent process management"
repository = "https://github.com/tonitangpotato/gidterm"
license = "MIT"
readme = "README.md"
keywords = ["terminal", "tui", "task", "graph", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Terminal/PTY
portable-pty = "0.8"
crossterm = "0.28"
ratatui = "0.28"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[[bin]]
name = "gidterm"
path = "src/main.rs"

[lib]
name = "gidterm"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
